; ModuleID = '/home/carl/AnghaBench/mongoose/examples/nRF52/http/rtt/Syscalls/extr_RTT_Syscalls_KEIL.c__sys_open.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/nRF52/http/rtt/Syscalls/extr_RTT_Syscalls_KEIL.c__sys_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__stdout_name = common dso_local global i32 0, align 4
@STDOUT = common dso_local global i32 0, align 4
@__stderr_name = common dso_local global i32 0, align 4
@STDERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_sys_open(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i8*, i8** %4, align 8
  %7 = load i32, i32* @__stdout_name, align 4
  %8 = call i64 @strcmp(i8* %6, i32 %7)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @STDOUT, align 4
  store i32 %11, i32* %3, align 4
  br label %20

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* @__stderr_name, align 4
  %15 = call i64 @strcmp(i8* %13, i32 %14)
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = load i32, i32* @STDERR, align 4
  store i32 %18, i32* %3, align 4
  br label %20

19:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %17, %10
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @strcmp(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
